--- a/Views/Pages/Product_List.ejs
+++ b/Views/Pages/Product_List.ejs
@@ -160,7 +160,7 @@ db.collection("Product")
 </div>
 <div class="form-group">
   <select name="state" id="maxRows" class="form-control" style="width: 300px;    
-  margin-top: 20px;">
+  margin-top: 20px;float: left;">
       <option value="5000">Hiển Thị Tất Cả</option>
       <option value="3">3</option>
       <option value="5">5</option>
@@ -170,17 +170,21 @@ db.collection("Product")
       <option value="50">50</option>
       <option value="75">75</option>
       <option value="100">100</option>
+
   </select>
-</div>
-<div>
   <form action="./searchresult" method="GET">
     <div class="form-group">
 
-      <input type="text" name="key" id="key" class="form-control" style="width: 300px;">
-      <button type="submit" class="btn btn-success">Tìm Kiếm</button>
+      <input type="text" name="key" id="key" class="form-control" style=" width: 300px;
+      float: left;
+      margin-top: 21px;
+      margin-left: 510px;">
+      <button type="submit" class="btn btn-primary" style="
+      margin-top: 21px;">Tìm Kiếm</button>
     </div>
   </form>
 </div>
+
 <table class="table table-srtriped table-bordered table-hover" id="mytable">
 <thead>
   <tr role="row" style="background-color: lightslategrey; color: lightyellow;">
