--- a/Views/Pages/Admin_List.ejs
+++ b/Views/Pages/Admin_List.ejs
@@ -104,7 +104,19 @@ db.collection("Admin")
       <option value="75">75</option>
       <option value="100">100</option>
   </select>
+  <form action="./searchresult" method="GET">
+    <div class="form-group">
+
+      <input type="text" name="key" id="key" class="form-control" style=" width: 300px;
+      float: left;
+      margin-top: -37px;
+      margin-left: 800px;">
+      <button type="submit" class="btn btn-primary" style="
+      margin-top: -66px;">Tìm Kiếm</button>
+    </div>
+  </form>
 </div>
+
 <table class="table table-srtriped table-bordered table-hover" id="mytable">
 <thead>
   <tr role="row" style="background-color: lightslategrey; color: lightyellow;">
