--- a/Views/Pages/Feedback_List.ejs
+++ b/Views/Pages/Feedback_List.ejs
@@ -96,6 +96,17 @@
                         <option value="75">75</option>
                         <option value="100">100</option>
                     </select>
+                    <form action="./searchresult" method="GET">
+                      <div class="form-group">
+                  
+                        <input type="text" name="key" id="key" class="form-control" style=" width: 300px;
+                        float: left;
+                        margin-top: -37px;
+                        margin-left: 800px;">
+                        <button type="submit" class="btn btn-primary" style="
+                        margin-top: -66px;">Tìm Kiếm</button>
+                      </div>
+                    </form>
                 </div>
       <table class="table table-srtriped table-bordered table-hover" id="mytable">
         <thead>
