--- a/Views/Pages/User_List.ejs
+++ b/Views/Pages/User_List.ejs
@@ -105,6 +105,17 @@ db.collection("User")
       <option value="50">50</option>
       <option value="75">75</option>
       <option value="100">100</option>
+      <form action="./searchresult" method="GET">
+        <div class="form-group">
+    
+          <input type="text" name="key" id="key" class="form-control" style=" width: 300px;
+          float: left;
+          margin-top: -37px;
+          margin-left: 800px;">
+          <button type="submit" class="btn btn-primary" style="
+          margin-top: -66px;">Tìm Kiếm</button>
+        </div>
+      </form>
   </select>
 </div>
 <table class="table table-srtriped table-bordered table-hover" id="mytable">
